public/stylesheets/cruises/mycruises.css
/* auth user - my cruises section */
#center-this {
  text-align: center;
}

a {
  color: black;
  text-decoration: none;
}

#my-cruises {
  height: 100vh;
  width: 80vw;
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin: 4vmin auto;
  gap: 3vmin;
  max-height: auto;
}

article {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  background: rgb(252, 241, 227);
  width: 100%;
  height: 100%;
  margin: 0 auto;
  box-shadow: 0.6px 1.3px 1.3px hsl(0deg 0% 0% / 0.48);
  border-radius: 2vmin;
}

.thumbnail-img {
  width: 28%;
  height: 80%;
  background-color: rgb(67, 67, 106);
  background-image: url('https://i.imgur.com/4KMpXtJ.png');
  background-position: center;
  background-size: 80%;
  background-repeat: no-repeat;
  margin: 0 2vmin;
  border-radius: 2vmin;
}

.cruise-desc {
  height: 80%;
  width: 80%;
  position: relative;
  margin-right: 2vmin;
}

article h2 {
  font-family: 'Vidaloka', serif;
  text-transform: uppercase;
  margin-bottom: 1vmin;
  font-size: 3vmin;
  letter-spacing: 0.35vmin;
}

.cruise-desc p {
  font-size: 2vmin;
  line-height: 4vmin;
}

.cruise-desc span {
  font-weight: 500;
}

/* media queries */
@media (max-width: 1600px) {
  #my-cruises {
    display: block;
    width: auto;
  }

  article {
    margin: 2vmin auto;
    height: 25vmin;
    width: 80vw;
  }

  article h2 {
    font-size: 3.5vmin;
  }

  .cruise-desc p, .cruise-desc span {
    font-size: 3vmin;
  }

  #my-cruises {
    height: auto;
  }
}

